--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase": "^9.9.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
+    "vue3-carousel": "^0.2.5",
+    "vuedraggable": "^4.1.0",
     "vuefire": "^2.2.5"
   },
   "devDependencies": {
