--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "b64-to-blob": "^1.2.19",
     "element-plus": "^2.2.16",
     "firebase": "^9.9.4",
     "vue": "^3.2.37",
