--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
-    "b64-to-blob": "^1.2.19",
     "element-plus": "^2.2.16",
-    "firebase": "^9.9.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
     "vue3-carousel": "^0.2.5",
-    "vuedraggable": "^4.1.0",
-    "vuefire": "^2.2.5"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
